tests/pos/i24894b/Bar_1.scala
object Bar {
  import quoted.*

  transparent inline def bar(): String = ${ macroBar() }
  def macroBar()(using Quotes): Expr[String] = {
    val s = "hello".reverse
    Expr(s)
  }
}
